--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 Flask==2.1.1
 twilio==7.16.0
-gunicorn==20.1.0  # Para producción
+gunicorn==20.1.0
+werkzeug==2.1.3  # Versión compatible con Flask 2.1.1
