--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.2.2  # Actualiza Flask
+Flask==2.2.2
 twilio==7.16.0
 gunicorn==20.1.0
-werkzeug==2.2.3  # Usar la versión más reciente de Werkzeug
+werkzeug==2.2.3
+python-dateutil==2.8.2  # Agrega esta línea
